Fixed spacing on titles

--- a/css/style.css
+++ b/css/style.css
@@ -209,9 +209,16 @@ header.masthead {
   display: flex !important;
 }
 
+.edu-divider {
+  border-color: #4F94A8;
+  margin-top: 5rem;
+  margin-bottom: 3rem;
+  border-width: 2px;
+}
+
 .project-divider {
   border-color: #4F94A8;
-  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+  margin: 5rem 0;
   border-width: 2px;
 }
 
